force-app/main/default/objects/UIT_User__c/UIT_User__c.object-meta.xml
<CustomObject>
    <label>UIT_User</label>
    <nameField>
        <label>UIT_User Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UIT_Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>