force-app/main/default/objects/UIT_User__c/fields/UIT_User_Avatar__c.field-meta.xml
<CustomField>
    <fullName>UIT_User_Avatar__c</fullName>
    <label>UIT_User Avatar</label>
    <type>Url</type>
</CustomField>