force-app/main/default/objects/UIT_User__c/fields/UIT_User_Email__c.field-meta.xml
<CustomField>
    <fullName>UIT_User_Email__c</fullName>
    <label>UIT_User Email</label>
    <type>Email</type>
</CustomField>