force-app/main/default/objects/UIT_User__c/fields/UIT_User_First_Name__c.field-meta.xml
<CustomField>
    <fullName>UIT_User_First_Name__c</fullName>
    <label>UIT_User First Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>